# Typeracer

./: .gitignore  CMakeLists.txt  Makefile  app  clientapp  game  program  serverapp
client/src/: main.c
lib/include/: audio.h  game.h  lobby.h  main.h  menu.h  netTCP.h  netUDP.h  network.h  stateAndData.h  text.h
lib/resources/: typeracertexts.txt  typeracertexts_fixed.txt
lib/src/: audio.c  game.c  lobby.c  menu.c  netTCP.c  netUDP.c  network.c  text.c
server/: main.c
server/src/: main.c
src/: main.c
